welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
var nbBD = 0
for (nbBD <- 0 to 11)
{while (!estSurBiscuit())
	{recule();}
if (estSurBiscuit())
	{prendBiscuit;nbBD = nbBD + 1}
	while (!estSurBiscuit())
		{avance();}
recule(); poseBiscuit();;recule();}


	